[package]
name = "forseti_sdk"
version = "0.1.2"
edition = "2024"
license-file = "LICENSE"
description = "Forseti SDK (Rust) — core types, linter+engine helpers, and ruleset API"
repository = "https://github.com/forseti-linter/forseti-sdk/"
readme = "README.md"
authors = ["Marc Seiler <digitalfiz@proton.me>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.9.5"
