[package]
name = "forseti_sdk"
description = "Forseti SDK (Rust) — core types, linter+engine helpers, and ruleset API"
repository = "https://github.com/forseti-linter/forseti-sdk/"
authors = ["Marc Seiler <digitalfiz@proton.me>"]
version = "0.1.3"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.9.5"
